
40. Fix: pragma gcc_errors no longer requires an unnecessary expression.

41. New: pragma export_json.

42. Fix: package documentation cleanup and help command updated accordingly.

43. New: pragma unchecked_import_json.

44. New: cgi.put_cgi_header default header "content-type" spelling mistake
corrected.

45. Fix: pragma import/unchecked_import( cgi ) handles missing variables
correctly.

46. New: numerics.fnv_hash_of, numerics.hash_of, numerics.murmur_hash_of,
numerics.sdbm_hash_of.  Backported from Bush 2.0.

47. Fix: whattime.sp example now uses number * string in correct order.

48. New: New examples: gray.sp

49. New: pragma software_model and System.Script_Software_Model - set and read
the software model name in a running script

50. Fix: pragma annotate( see also,... ) now pragma annotate( see_also,...)

51. Fix: no longer auto-declare identifiers containing a period.

52. Fix: semicolon( ';' ) as a command name produces a "statement expected"
error instead of being treated as a legitimate command name.

53. Fix: without-mysql/without-postgres - configure substitutes correct libraries im
GNUmakefile.

54. Change: cd displays "cannot access" rather than "no such path", bringing
it in line with Bash but also more accurate error message.

55. Fix: pg_config is called in configure but it returns the libraries used to
build the PostgreSQL server, not to use libpq.  Many unnecessary libraries are
required.  A patch has been made to use sed to remove the extra libraries.
More libraries might be removable.  Also backported some APQ GNUmakefile stuff
from Bush 2.0.

56. Fix: tab completion works properly on directories '.', './', '..' and
'../'.  Also used Dir_Separator in user_io.adb for better O/S independence.

57. Fix: tab completion works properly when the final character differs
between 2 or more candidates.

58. Fix: broken shell redirections (e.g. 2>&1) now working again.

59. Fix: unknown pragmas no longer raise an uncaught exception.
