@@ -6170,7 +6170,8 @@ begin
           readchar( chars, resultFile, ch, 1 );            -- slow (one char)
           if chars = 0 then                                -- read none?
              exit;                                         --   done
-          elsif chars < 0 then                             -- error
+ -- KB: 2012/02/15: see bush_os-tty for an explaination of this kludge
+          elsif chars < 0 or chars = 18446744073709551615 then -- error
              if C_errno = EAGAIN or C_errno = EINTR then   -- retry?
                 goto reread;                               -- do so
              end if;                                       -- other error?
