@@ -521,7 +521,8 @@ begin
    GetParameterValue( ref, fileInfo );
    fd := aFileDescriptor'value( to_string( stringField( fileInfo, recSep, fd_field ) ) );
 <<reread>> readchar( result, fd, ch, 1 );
-   if result < 0 then                   -- a problem?
+ -- KB: 2012/02/15: see bush_os-tty for an explaination of this kludge
+     if result < 0 or result = 18446744073709551615 then
       if C_errno = EAGAIN  or C_errno = EINTR then
          goto reread;                   -- interrupted? try again
       end if;                           -- error? report it
@@ -980,7 +981,8 @@ begin
       -- stdin (I don't like this)
      loop
         readchar( result, stdin, ch, 1 );
-        if result < 0 then
+ -- KB: 2012/02/15: see bush_os-tty for an explaination of this kludge
+        if result < 0 or result = 18446744073709551615 then
            if C_errno /= EAGAIN and C_errno /= EINTR then
               err( "unable to read file:" & OSerror( C_errno ) );
               exit;
@@ -1052,7 +1054,8 @@ begin
      else
         fd := aFileDescriptor'value( to_string( stringField( file_ref, fd_field ) ) );
    <<reread>> readchar( result, fd, ch, 1 );
-         if result < 0 then
+ -- KB: 2012/02/15: see bush_os-tty for an explaination of this kludge
+         if result < 0 or result = 18446744073709551615 then
               if C_errno = EAGAIN  or C_errno = EINTR then
                  goto reread;
               end if;
